--- a/css/style.css
+++ b/css/style.css
@@ -40,3 +40,8 @@ ul{
     font-weight: 400;
     font-family: sans-serif;
 }
+.Asilbek{
+    padding: 30px 0;
+    background-color: blue;
+    margin-bottom: 20px;
+}
